--- a/TODO
+++ b/TODO
@@ -1,8 +1,12 @@
-DEPENDENCIES 
+[ DONE ] DEPENDENCIES
 
 00:48 <@paraxor> does it build dependencies within our repo?
 00:48 <@paraxor> say X depends on Y and you install X
 00:48 <@paraxor> where Y is in our repo
+
+VERSION CHECK
+ - pacman -Qi - parse version if package installed -> system update
+with world and check if already installed that pkg version
 
 SEARCH
   - Search by group
