--- a/TODO
+++ b/TODO
@@ -5,9 +5,12 @@
 00:48 <@paraxor> where Y is in our repo
 
 VERSION CHECK
- - pacman -Qi - parse version if package installed ->
+  - pacman -Qi - parse version if package installed ->
     system update with world and
     [DONE] check if already installed that pkg version
 
 SEARCH
   - Search by group
+
+SSL CERTS - CURL
+  - add certificates
