--- a/TODO
+++ b/TODO
@@ -10,4 +10,23 @@ VERSION CHECK
     [DONE] check if already installed that pkg version
 
 SEARCH
-  - Search by group
+  - [DONE] Search by pkdesc
+        - < v0.5.6
+$ blackman -s wordpress
+--==[ blackman by nullsecurity.net ]==--
+[-] ERROR: Package 'wordpress' not found
+        - > v0.5.6
+$ ./blackman -s wordpress
+--==[ blackman - BlackArch ]==--
+[+] plecost
+    Wordpress finger printer tool search and retrieve information about the plugins versions installed in Wordpress systems.
+[+] wordpot
+    A Wordpress Honeypot.
+[+] flunym0us
+    A Vulnerability Scanner for Wordpress and Moodle.
+[+] wpbf
+    Multithreaded WordPress brute forcer.
+[+] wpscan
+    A vulnerability scanner which checks the security of WordPress installations using a black box approach.
+[+] wordbrutepress
+    Python script that performs brute forcing against WordPress installs using a wordlist.
